# nfac-hws

./: d
hws/hw-15/: hw.py
hws/hw1/: ex21.py
hws/hw12/: hw.py
hws/hw14/: pyproject.toml  test_main.py
hws/hw16/: hw.py  test_hw.py
hws/hw_backend_1/: server.py
hws/hw_backend_2/: cars.py  users.py
hws/hw_backend_2/templates/: find_id.html  index.html
hws/seminar/: aiohttp_server.py
